索引的增删改查

--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,6 @@
   <modules>
   	<module>Luncene1</module>
   	<module>LunceneCommons</module>
+  	<module>Luncene2</module>
   </modules>
 </project>
